Action setup - add ignorelist attempt to find diff2html

--- a/.github/workflows/diffy.yml
+++ b/.github/workflows/diffy.yml
@@ -30,6 +30,8 @@ jobs:
         node-version: 10.x
     - name: Install diff2html
       run: npm install diff2html
+    - name: Find diff2html
+      run: find ./ -name diff2html
     - name: Restore base diff environment
       id: cache-clones
       uses: actions/cache@v2
