Action setup - cache adjust

--- a/.github/workflows/diffy.yml
+++ b/.github/workflows/diffy.yml
@@ -44,6 +44,7 @@ jobs:
           ${{ env.CACHE_VERSION}}-${{ runner.os }}-base-${{ hashFiles('scripts/diffy.sh') }}-${{ hashFiles('branches.txt') }}-${{ hashFiles('betabranches.txt') }}}
           ${{ env.CACHE_VERSION}}-${{ runner.os }}-base-${{ hashFiles('scripts/diffy.sh') }}-${{ hashFiles('branches.txt') }}
           ${{ env.CACHE_VERSION}}-${{ runner.os }}-base-${{ hashFiles('scripts/diffy.sh') }}
+          ${{ env.CACHE_VERSION}}-${{ runner.os }}-base
 
   diff:
     runs-on: ubuntu-latest
