Action setup - dependency

--- a/.github/workflows/diffy.yml
+++ b/.github/workflows/diffy.yml
@@ -46,6 +46,7 @@ jobs:
   diff:
     runs-on: ubuntu-latest
     name: Check for differences
+    needs: prepare
     steps:
     - name: Check out our own code
       uses: actions/checkout@v2
