--- a/.github/workflows/diffy.yml
+++ b/.github/workflows/diffy.yml
@@ -15,31 +15,25 @@ jobs:
     steps:
     - name: Check out our own code
       uses: actions/checkout@v2
-    - name: Cache Node.js modules
+    - name: Cache base diff environment
+      id: cache-clones
       uses: actions/cache@v2
       with:
-        # npm cache files are stored in `~/.npm` on Linux/macOS
-        path: ~/.npm 
-        key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+        path: |
+          ~/.npm
+          clones
+          **/node_modules
+        key: >-
+          ${{ env.CACHE_VERSION}}-${{ runner.os }}-base-${{ hashFiles('scripts/setup.sh') }}
         restore-keys: |
-          ${{ runner.OS }}-node-
-          ${{ runner.OS }}-
+          ${{ env.CACHE_VERSION}}-${{ runner.os }}-base-${{ hashFiles('scripts/setup.sh') }}
+          ${{ env.CACHE_VERSION}}-${{ runner.os }}-base
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
         node-version: 10.x
     - name: Install diff2html
       run: npm install diff2html
-    - name: Cache base diff environment
-      id: cache-clones
-      uses: actions/cache@v2
-      with:
-        path: clones
-        key: >-
-          ${{ env.CACHE_VERSION}}-${{ runner.os }}-base-${{ hashFiles('scripts/setup.sh') }}
-        restore-keys: |
-          ${{ env.CACHE_VERSION}}-${{ runner.os }}-base-${{ hashFiles('scripts/setup.sh') }}
-          ${{ env.CACHE_VERSION}}-${{ runner.os }}-base
     - name: Setup clones
       run: scripts/setup.sh
 
