--- a/.github/workflows/diffy.yml
+++ b/.github/workflows/diffy.yml
@@ -42,7 +42,9 @@ jobs:
       with:
         node-version: 10.x
     - name: Install diff2html
-      run: npm install diff2html-cli
+      run: npm install diff2html-cli diff2html
+    - name: Setup clones
+      run: find ./ -name "diff2html*"
     - name: Setup clones
       run: scripts/setup.sh
     - name: Run diffy
