--- a/.github/workflows/diffy.yml
+++ b/.github/workflows/diffy.yml
@@ -73,6 +73,8 @@ jobs:
     - name: Setup clones
       run: scripts/setup.sh
     - name: Run diffy
+      env:
+        PROGRESS_ DEPLOYKEY: {{ secrets.PROGRESS_DEPLOYKEY }}
       run: scripts/diffy.sh
 
 
