--- a/.github/workflows/diffy.yml
+++ b/.github/workflows/diffy.yml
@@ -74,7 +74,7 @@ jobs:
       run: scripts/setup.sh
     - name: Run diffy
       env:
-        PROGRESS_DEPLOYKEY: {{ secrets.PROGRESS_DEPLOYKEY }}
-      run: scripts/diffy.sh
+        PROGRESS_DEPLOYKEY: ${{ secrets.PROGRESS_DEPLOYKEY }}
+      run: scripts/diffy.sh 
 
 
