Attempt to automate/-detect pw-beta branching + master/main switch

--- a/.github/workflows/diffy.yml
+++ b/.github/workflows/diffy.yml
@@ -68,7 +68,7 @@ jobs:
       with:
         repository: plugwise/plugwise-beta
         ssh-key: ${{ secrets.plugwise_deploykey }}
-        path: clones/beta-master
+        path: clones/beta-main
 
     - name: Setup SSH Keys and known_hosts
       env:
