--- a/.github/workflows/diffy.yml
+++ b/.github/workflows/diffy.yml
@@ -1,7 +1,7 @@
 name: Plugwise differences
 
 env:
-  CACHE_VERSION: 4
+  CACHE_VERSION: 5
 
 on:
   schedule:
@@ -41,7 +41,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 10.x
+        node-version: 18
     - name: Install diff2html
       run: npm -g install diff2html-cli diff2html
     - name: Checkout HA core
