--- a/.github/workflows/diffy.yml
+++ b/.github/workflows/diffy.yml
@@ -57,7 +57,7 @@ jobs:
 
   prepare-smile:
     runs-on: ubuntu-latest
-    name: [Smile] Prepare environment
+    name: Smile Prepare environment
     needs: prepare
     steps:
 
@@ -83,7 +83,7 @@ jobs:
 
   prepare-usb:
     runs-on: ubuntu-latest
-    name: [USB] Prepare environment
+    name: USB Prepare environment
     needs: prepare
     steps:
 
@@ -109,7 +109,7 @@ jobs:
 
   checkout-smile:
     runs-on: ubuntu-latest
-    name: [smile] Prepare environment
+    name: Smile Prepare environment
     needs: prepare-smile
     steps:
 
@@ -123,7 +123,7 @@ jobs:
 
   checkout-usb:
     runs-on: ubuntu-latest
-    name: [USB] Prepare environment
+    name: USB Prepare environment
     needs: prepare-usb
     steps:
 
@@ -138,7 +138,7 @@ jobs:
 
   diffy-smile:
     runs-on: ubuntu-latest
-    name: [Smile] run diff
+    name: Smile run diff
     needs: checkout-usb
     steps:
 
@@ -157,7 +157,7 @@ jobs:
 
   diffy-smile:
     runs-on: ubuntu-latest
-    name: [Smile] run diff
+    name: Smile run diff
     needs: checkout-usb
     steps:
 
