--- a/.github/workflows/diffy.yml
+++ b/.github/workflows/diffy.yml
@@ -1,7 +1,7 @@
 name: Plugwise differences
 
 env:
-  CACHE_VERSION: 5
+  CACHE_VERSION: 6
 
 on:
   schedule:
@@ -155,7 +155,7 @@ jobs:
         SSH_AUTH_SOCK: /tmp/ssh_agent.sock
       run: scripts/diffy.sh beta
 
-  diffy-smile:
+  diffy-usb:
     runs-on: ubuntu-latest
     name: Smile run diff
     needs: checkout-usb
