--- a/.github/workflows/diffy.yml
+++ b/.github/workflows/diffy.yml
@@ -65,20 +65,20 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: home-assistant/core
-        path: beta/clones/ha-core
+        path: clones/beta/ha-core
     - name: Checkout Plugwise fork of HA core
       uses: actions/checkout@v3
       with:
         repository: plugwise/home-assistant.core
         ssh-key: ${{ secrets.hacore_deploykey }}
-        path: clones/pw-core
+        path: clones/beta/pw-core
         fetch-depth: 0
     - name: Checkout beta component (branch-switch)
       uses: actions/checkout@v3
       with:
         repository: plugwise/plugwise-beta
         ssh-key: ${{ secrets.plugwise_deploykey }}
-        path: beta/clones
+        path: clones/beta
         fetch-depth: 0
 
   prepare-usb:
@@ -91,20 +91,20 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: home-assistant/core
-        path: usb-beta/clones/ha-core
+        path: clones/usb-beta/ha-core
     - name: Checkout Plugwise fork of HA core for usb-beta
       uses: actions/checkout@v3
       with:
         repository: plugwise/home-assistant.core
         ssh-key: ${{ secrets.hacore_deploykey }}
-        path: usb-beta/clones/pw-core
+        path: clones/usb-beta/pw-core
         fetch-depth: 0
     - name: Checkout usb-beta component (branch-switch)
       uses: actions/checkout@v3
       with:
         repository: plugwise/plugwise-beta
         ssh-key: ${{ secrets.plugwise_deploykey }}
-        path: usb-beta/clones
+        path: clones/usb-beta
         fetch-depth: 0
 
   checkout-smile:
@@ -133,7 +133,7 @@ jobs:
         repository: plugwise/plugwise_usb-beta
         ref: main
         ssh-key: ${{ secrets.plugwise_deploykey }}
-        path: clones/beta-main
+        path: clones/usb-beta-main
 
 
   diffy-smile:
@@ -157,7 +157,7 @@ jobs:
 
   diffy-usb:
     runs-on: ubuntu-latest
-    name: Smile run diff
+    name: USB run diff
     needs: checkout-usb
     steps:
 
