--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,12 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
-  ]
+  "extends": ["config:base", ":dependencyDashboard", "schedule:daily"],
+  "packageRules": [
+    {
+      "matchManagers": ["github-actions"],
+      "addLabels": ["dependencies", "github-actions"],
+      "automerge": true
+    }
+  ],
+  "timezone": "Europe/Amsterdam"
 }
