--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base", ":dependencyDashboard", "schedule:daily"],
+  "ignorePaths": [ "index.html", "beta/*.html", "usb_beta/*.html" ],
   "packageRules": [
     {
       "matchManagers": ["github-actions"],
