--- a/.github/workflows/diffy.yml
+++ b/.github/workflows/diffy.yml
@@ -80,7 +80,7 @@ jobs:
       with:
         repository: plugwise/plugwise-beta
         ssh-key: ${{ secrets.plugwise_deploykey }}
-        path: clones/beta
+        path: clones/beta/beta
         fetch-depth: 0
     - name: Checkout beta component (main-branch)
       uses: actions/checkout@v3
@@ -138,7 +138,7 @@ jobs:
       with:
         repository: plugwise/plugwise-beta
         ssh-key: ${{ secrets.plugwise_deploykey }}
-        path: clones/usb-beta
+        path: clones/usb-beta/usb-beta
         fetch-depth: 0
 
 #    runs-on: ubuntu-latest
