--- a/.github/workflows/diffy.yml
+++ b/.github/workflows/diffy.yml
@@ -102,7 +102,7 @@ jobs:
     - name: Checkout usb-beta component (branch-switch)
       uses: actions/checkout@v3
       with:
-        repository: plugwise/plugwise-beta
+        repository: plugwise/plugwise_usb-beta
         ssh-key: ${{ secrets.plugwise_deploykey }}
         path: clones/usb-beta/usb-beta
         fetch-depth: 0
